# fastapi-doctor

./: .fastapi-doctor.example.yml  .fastapi-doctor.yml  .gitignore  .python-doctor.example.yml  AGENTS.md  CONTRIBUTING.md  README.md  README_PYTHON_DOCTOR.md  RUST_OWNERSHIP_AUDIT.md  pyproject.toml
.github/workflows/: ci.yml  dependency-review.yml  publish-index.yml  release.yml  test.yml  trivy.yml  virus-scan.yml
rust/: Cargo.toml
rust/doctor_core/: Cargo.toml  build.rs
rust/doctor_core/src/: ast_helpers.rs  lib.rs  main.rs
rust/doctor_core/src/rules/: architecture.rs  correctness.rs  mod.rs  performance.rs  pydantic.rs  resilience.rs  security.rs
rust/fastapi_doctor_core/: Cargo.toml
rust/fastapi_doctor_core/src/: analysis.rs  ast_helpers.rs  lib.rs
rust/fastapi_doctor_native/: Cargo.toml
rust/fastapi_doctor_native/src/: lib.rs
rust/fastapi_doctor_project/: Cargo.toml
rust/fastapi_doctor_project/src/: context.rs  lib.rs  metadata.rs  walk.rs
rust/fastapi_doctor_rules/: Cargo.toml
rust/fastapi_doctor_rules/src/: alembic.rs  architecture.rs  configuration.rs  correctness.rs  engine.rs  lib.rs  performance.rs  pydantic.rs  registry.rs  resilience.rs  routes.rs  rule_selector.rs  security.rs  tests.rs
scripts/: build_simple_index.py  doctor_checks.py  export_openapi_schema.py  python_doctor.py  run_fastapi_template_example.sh  stage_native_binary.py
skills/astral-rust-refactor/: SKILL.md
skills/astral-rust-refactor/references/: MIMIC_RULES.md  REFERENCE_1_workspace_lib.rs  REFERENCE_2_workspace_resolver.rs  REFERENCE_3_parsed_module.rs  REFERENCE_4_project_walk.rs  REFERENCE_5_project_core.rs  REFERENCE_6_rule_selector.rs  REFERENCE_7_suppression.rs  REFERENCE_8_noqa.rs  REFERENCE_9_registry.rs
skills/fastapi-doctor/: SKILL.md
skills/fastapi-doctor/references/: checklist.md  rules.md
skills/python-doctor/: SKILL.md
skills/python-doctor/references/: checklist.md  rules.md
src/fastapi_doctor/: __init__.py  _compat.py  app_loader.py  cli.py  console.py  export_openapi.py  external_tools.py  models.py  native_core.py  project.py  reporting.py  runner.py  sarif.py  static_routes.py  suppression.py
src/fastapi_doctor/checks/: __init__.py  _async_analysis.py  _legacy_route_checks.py  architecture.py  configuration.py  correctness.py  performance.py  pydantic.py  resilience.py  route_checks.py  security.py  static_checks.py
src/python_doctor/: __init__.py  app_loader.py  cli.py  export_openapi.py  external_tools.py  models.py  project.py  reporting.py  runner.py
src/python_doctor/checks/: architecture.py  configuration.py  performance.py  pydantic.py
tests/: test_cli.py  test_doctor_checks.py  test_native_core.py  test_new_rules.py  test_sarif.py  test_versioning.py
