[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "fastapi-doctor"
version = "0.1.0"
description = "Agent-first FastAPI/Python backend health checker."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["fastapi", "backend", "lint", "quality", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "fastapi>=0.116.0",
    "pytest>=9.0.0",
]

[project.scripts]
fastapi-doctor = "python_doctor.cli:main"
fastapi-doctor-export-openapi = "python_doctor.export_openapi:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/python_doctor"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/scripts",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
