[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "fastapi-doctor"
dynamic = ["version"]
description = "Agent-first FastAPI/Python backend health checker."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["fastapi", "backend", "lint", "quality", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "fastapi>=0.116.0",
    "pytest>=9.0.0",
]

[project.scripts]
fastapi-doctor = "fastapi_doctor.cli:main"
fastapi-doctor-export-openapi = "fastapi_doctor.export_openapi:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/fastapi_doctor/_version.py"

[tool.hatch.build]
exclude = [
    "/rust/doctor_core/target",
    "/rust/doctor_core/target/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_doctor"]
artifacts = [
    "src/fastapi_doctor/_fastapi_doctor_native*",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/scripts",
    "/rust",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    "/rust/doctor_core/target",
    "/rust/doctor_core/target/**",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
