[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "fastapi-doctor"
dynamic = ["version"]
description = "Agent-first FastAPI/Python backend health checker."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["fastapi", "backend", "lint", "quality", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/s-smits/fastapi-doctor"
Repository = "https://github.com/s-smits/fastapi-doctor"
Issues = "https://github.com/s-smits/fastapi-doctor/issues"
Releases = "https://github.com/s-smits/fastapi-doctor/releases"

[project.optional-dependencies]
dev = [
    "fastapi>=0.116.0",
    "pytest>=9.0.0",
    "maturin>=1.5,<2.0",
]

[project.scripts]
fastapi-doctor = "fastapi_doctor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "fastapi_doctor._fastapi_doctor_native"
manifest-path = "rust/fastapi_doctor_native/Cargo.toml"
strip = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "maturin>=1.5,<2.0",
]
