[workspace]
members = [
    "fastapi_doctor_core",
    "fastapi_doctor_project",
    "fastapi_doctor_rules",
    "fastapi_doctor_native",
]
resolver = "2"

[workspace.package]
version = "0.3.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/s-smits/fastapi-doctor"
homepage = "https://github.com/s-smits/fastapi-doctor"

[workspace.dependencies]
rayon = "1.10.0"
rustpython-parser = "0.4.0"
pyo3 = { version = "0.23.5", features = ["abi3-py312"] }
