[package]
name = "fastapi-doctor-native"
version = "0.3.1"
edition = "2021"
description = "Native PyO3 engine for fastapi-doctor."
license = "MIT"
repository = "https://github.com/s-smits/fastapi-doctor"
homepage = "https://github.com/s-smits/fastapi-doctor"

[lib]
name = "_fastapi_doctor_native"
crate-type = ["cdylib"]

[dependencies]
rustpython-parser = "0.4.0"
rayon = "1.10.0"
pyo3 = { version = "0.23.5", features = ["abi3-py312"] }
